# assistd

./: AGENTS.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: config.sample.toml
crates/assistd/: Cargo.toml
crates/assistd-config/: Cargo.toml
crates/assistd-config/src/: agent.rs  chat.rs  compositor.rs  daemon.rs  defaults.rs  embedding.rs  errors.rs  fixtures.rs  lib.rs  llama.rs  mcp.rs  memory.rs  model.rs  presence.rs  remote.rs  sleep.rs  timeouts.rs  tools.rs  top.rs  tray.rs  voice.rs
crates/assistd-config/tests/: defaults_single_sourced.rs
crates/assistd-config/tests/fixtures/: minimal.toml
crates/assistd-core/: Cargo.toml
crates/assistd-core/src/: agent.rs  config.rs  ipc.rs  lib.rs  presence.rs  recovery.rs  socket.rs  state.rs
crates/assistd-core/src/state/: branches.rs  capabilities.rs  context.rs  memory_handlers.rs  memory_stack.rs  mod.rs  persistence.rs  presence_handlers.rs  query.rs  runtime.rs  subscribe.rs  subsystems.rs  voice_handlers.rs  wire.rs
crates/assistd-embed/: Cargo.toml
crates/assistd-embed/src/: client.rs  embedder_task.rs  lib.rs
crates/assistd-embed/src/server/: backoff.rs  error.rs  health.rs  mod.rs  process.rs  service.rs  supervisor.rs
crates/assistd-ipc/: Cargo.toml
crates/assistd-ipc/src/: client.rs  lib.rs
crates/assistd-llm/: Cargo.toml
crates/assistd-llm/src/: lib.rs
crates/assistd-llm/src/chat/: client.rs  config.rs  conversation.rs  error.rs  mod.rs  sse.rs  think_splitter.rs  wire.rs
crates/assistd-llm/src/llama_server/: backoff.rs  capabilities.rs  config.rs  control.rs  error.rs  gguf.rs  health.rs  mod.rs  process.rs  service.rs  supervisor.rs
crates/assistd-llm/tests/: chat_client.rs  presence.rs  presence_stress.rs  supervisor.rs  wake_latency.rs
crates/assistd-mcp/: Cargo.toml
crates/assistd-mcp/src/: backoff.rs  error.rs  handle.rs  health_route.rs  jsonrpc.rs  lib.rs  prompt.rs  sse.rs  stdio.rs
crates/assistd-mcp/tests/: integration_stdio.rs
crates/assistd-memory/: Cargo.toml
crates/assistd-memory/src/: chunking.rs  lib.rs  migrations.rs
crates/assistd-memory/src/sqlite/: connection.rs  conversations.rs  embeddings.rs  mod.rs  store.rs  writer.rs
crates/assistd-memory/tests/: round_trip.rs
crates/assistd-tools/: Cargo.toml
crates/assistd-tools/src/: attachment.rs  command.rs  lib.rs  memory.rs  memory_tools.rs  policy.rs  presentation.rs  prompt.rs  run.rs  vision.rs
crates/assistd-tools/src/chain/: executor.rs  mod.rs  parser.rs
crates/assistd-tools/src/commands/: bash.rs  cat.rs  echo.rs  grep.rs  ls.rs  mod.rs  screenshot.rs  see.rs  wc.rs  web.rs  wm.rs  write.rs
crates/assistd-tools/tests/: sandbox_policy.rs
crates/assistd-tui/: Cargo.toml
crates/assistd-voice/: Cargo.toml
crates/assistd-voice/src/: controller.rs  gpu.rs  lib.rs  model_cache.rs  sentence.rs  transcribe.rs  whisper.rs
crates/assistd-voice/src/listen/: capture.rs  consumer.rs  mic.rs  mod.rs  vad.rs
crates/assistd-voice/src/mic/: capture.rs  consumer.rs  mod.rs
crates/assistd-voice/src/piper/: cache.rs  config.rs  error.rs  mod.rs  playback.rs  service.rs  synth.rs
crates/assistd-voice/tests/: audio_round_trip.rs  piper_missing_binary.rs  resample.rs  transcribe.rs
crates/assistd-wm/: Cargo.toml
crates/assistd-wm/src/: backoff.rs  criteria.rs  error.rs  i3.rs  lib.rs  snapshot.rs  sway.rs
crates/assistd-wm/tests/: i3_live.rs  sway_live.rs
crates/assistd-wm/tests/common/: mod.rs
crates/assistd/src/: daemon.rs  embed_init.rs  gpu_monitor.rs  hotkey.rs  idle_monitor.rs  ipc_helper.rs  ipc_voice_proxy.rs  listen.rs  listen_dispatcher.rs  main.rs  mcp_init.rs  memory_cli.rs  memory_init.rs  presence.rs  ptt.rs  query.rs  voice_ctl.rs  voice_init.rs  voice_probe.rs  wm_backend.rs  wm_init.rs
crates/assistd/src/chat/: app.rs  gate.rs  input.rs  mod.rs  output.rs  throughput.rs  ui.rs  voice.rs  vram.rs
crates/assistd/src/tray/: menu.rs  mod.rs  state.rs  subscribe.rs
crates/assistd/src/tray/popup/: mod.rs  state.rs  visibility.rs  window.rs  wm_bridge.rs
docs/: architecture.md  tools.md
docs/wm/: i3.md  sway.md
