[workspace]
resolver = "2"
members = [
    "crates/assistd",
    "crates/assistd-core",
    "crates/assistd-ipc",
    "crates/assistd-llm",
    "crates/assistd-voice",
    "crates/assistd-tools",
    "crates/assistd-wm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates. `version` is declared alongside `path` so tooling that
# inspects workspace manifests (e.g. cargo-deny) doesn't treat these as
# wildcard deps. `path` still wins for local builds.
assistd-core  = { version = "0.1", path = "crates/assistd-core" }
assistd-ipc   = { version = "0.1", path = "crates/assistd-ipc" }
assistd-llm   = { version = "0.1", path = "crates/assistd-llm" }
assistd-voice = { version = "0.1", path = "crates/assistd-voice" }
assistd-tools = { version = "0.1", path = "crates/assistd-tools" }
assistd-wm    = { version = "0.1", path = "crates/assistd-wm" }

# External crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
libc = "0.2"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
tracing-appender = "0.2"
textwrap = "0.16"
nvml-wrapper = "0.12"
regex = "1"
tempfile = "3"
base64 = "0.22"
infer = "0.19"
shlex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"
