[workspace]
resolver = "2"
members = [
    "crates/assistd",
    "crates/assistd-config",
    "crates/assistd-core",
    "crates/assistd-embed",
    "crates/assistd-ipc",
    "crates/assistd-llm",
    "crates/assistd-mcp",
    "crates/assistd-memory",
    "crates/assistd-voice",
    "crates/assistd-tools",
    "crates/assistd-wm",
]
default-members = ["crates/assistd"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
assistd-config = { version = "1.0", path = "crates/assistd-config" }
assistd-core   = { version = "1.0", path = "crates/assistd-core" }
assistd-embed  = { version = "1.0", path = "crates/assistd-embed" }
assistd-ipc    = { version = "1.0", path = "crates/assistd-ipc" }
assistd-llm    = { version = "1.0", path = "crates/assistd-llm" }
assistd-mcp    = { version = "1.0", path = "crates/assistd-mcp" }
assistd-memory = { version = "1.0", path = "crates/assistd-memory" }
assistd-voice  = { version = "1.0", path = "crates/assistd-voice" }
assistd-tools  = { version = "1.0", path = "crates/assistd-tools" }
assistd-wm     = { version = "1.0", path = "crates/assistd-wm" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2.0.18"
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.2", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
libc = "0.2.186"
rustix = { version = "1", features = ["stdio", "process"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
tracing-appender = "0.2.5"
textwrap = "0.16"
nvml-wrapper = "0.12"
global-hotkey = "0.8"
regex = "1"
tempfile = "3"
base64 = "0.22"
infer = "0.19"
shlex = "2"
which = "8.0.2"
rodio = { version = "0.22", default-features = false, features = ["playback"] }
ratatui-image = { version = "11.0.3", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rusqlite = { version = "0.37", features = ["bundled", "blob"] }
tokio-rusqlite = "0.7"
rusqlite_migration = "2.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio-i3ipc = "0.16"
swayipc-async = "3"
url = "2"
parking_lot = "0.12"
ksni = { version = "0.3.4", default-features = false, features = ["tokio"] }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland"] }

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"
