[package]
name = "assistd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
assistd-ipc = { workspace = true }
assistd-llm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
