[package]
name = "assistd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
assistd-config = { workspace = true }
assistd-ipc = { workspace = true }
assistd-llm = { workspace = true }
assistd-tools = { workspace = true }
# The default features (whisper + mic) bring in cpal; callers that
# don't want mic support (e.g. a headless-minimal daemon build) can
# override this elsewhere in their feature set.
assistd-voice = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
