[package]
name = "assistd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
assistd-config = { workspace = true }
assistd-embed = { workspace = true }
assistd-ipc = { workspace = true }
assistd-llm = { workspace = true }
assistd-memory = { workspace = true }
assistd-tools = { workspace = true }
assistd-voice = { workspace = true }
assistd-wm    = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "fs", "signal"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
