[package]
name = "assistd-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time", "io-util", "process", "net"] }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rustix = { workspace = true }
assistd-config = { workspace = true }
assistd-memory = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
