[package]
name = "assistd-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Compiles the fake_llama_server helper binary used by integration tests.
test-support = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
tracing-subscriber = { workspace = true }
assistd-core = { workspace = true }
assistd-ipc = { workspace = true }
tempfile = "3"

[[bin]]
name = "fake_llama_server"
path = "src/bin/fake_llama_server.rs"
required-features = ["test-support"]
