[package]
name = "assistd-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
assistd-config = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
infer = { workspace = true }
shlex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
