[package]
name = "assistd-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
assistd-config = { workspace = true }
assistd-embed = { workspace = true }
assistd-memory = { workspace = true }
# Wire-protocol types for the IpcConfirmationGate. Default features
# only — no client/socket code, just the Event/Request enums.
assistd-ipc = { workspace = true }
# WindowManager trait + types, consumed by `commands::wm`.
assistd-wm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "fs", "process"] }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
infer = { workspace = true }
shlex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
