[package]
name = "assistd-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["whisper", "mic", "listen", "tts"]
whisper = [
    "dep:whisper-rs",
    "dep:reqwest",
    "dep:nvml-wrapper",
    "dep:futures-util",
]
# Enables `MicVoiceInput` — cpal capture, SPSC ring buffer, resampler.
# Requires `whisper` because MicVoiceInput wraps WhisperTranscriber.
mic = ["whisper", "dep:cpal", "dep:ringbuf", "dep:rubato"]
# Enables `MicContinuousListener` — VAD-driven hands-free utterance
# segmentation that feeds completed utterances to whisper. Sits on top
# of the `mic` + `whisper` stack.
listen = ["mic", "dep:webrtc-vad"]
# Enables `PiperVoiceOutput` — managed per-utterance piper subprocess
# with rodio playback. Pulls in rodio (which itself uses cpal) and
# reqwest (shared with whisper) for HuggingFace voice downloads.
tts = [
    "dep:rodio",
    "dep:serde",
    "dep:serde_json",
    "dep:reqwest",
    "dep:futures-util",
    "dep:which",
]
cuda = ["whisper-rs/cuda"]
# Gates the integration test that downloads a small model from HuggingFace.
test-support = ["whisper", "mic", "listen", "tts", "dep:hound"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "fs", "process"] }
tracing = { workspace = true }
thiserror = { workspace = true }
assistd-ipc = { workspace = true }
# `assistd-config` is required unconditionally because `sentence` (built
# in every feature combination) consumes the `CodeBlockMode` enum.
assistd-config = { workspace = true }

# Whisper backend
whisper-rs = { version = "0.16", optional = true, default-features = false, features = ["tracing_backend"] }
reqwest = { workspace = true, optional = true, features = ["stream"] }
nvml-wrapper = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Mic backend
cpal = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
rubato = { version = "0.15", optional = true }

# Continuous listening — streaming voice-activity detection
webrtc-vad = { version = "0.4", optional = true }

# Piper TTS
rodio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
which = { workspace = true, optional = true }

# Test support
hound = { version = "3.5", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
hound = "3.5"

[lints]
workspace = true
