[package]
name = "assistd-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["whisper", "mic", "listen", "tts"]
whisper = [
    "dep:whisper-rs",
    "dep:reqwest",
    "dep:nvml-wrapper",
    "dep:futures-util",
]
# Requires `whisper` because `MicVoiceInput` wraps `WhisperTranscriber`.
mic = ["whisper", "dep:cpal", "dep:ringbuf", "dep:rubato"]
listen = ["mic", "dep:webrtc-vad"]
# Pulls in rodio (which itself uses cpal) and reqwest (shared with whisper).
tts = [
    "dep:rodio",
    "dep:serde",
    "dep:serde_json",
    "dep:reqwest",
    "dep:futures-util",
    "dep:which",
]
cuda = ["whisper-rs/cuda"]
test-support = [
    "whisper",
    "mic",
    "listen",
    "tts",
    "dep:hound",
    "dep:assistd-llm",
    "dep:clap",
    "dep:tracing-subscriber",
]

[[bin]]
name = "voice_latency_bench"
required-features = ["test-support"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "fs", "process"] }
tracing = { workspace = true }
thiserror = { workspace = true }
assistd-ipc = { workspace = true }
# Required unconditionally because `sentence` (built in every feature combination)
# consumes the `CodeBlockMode` enum.
assistd-config = { workspace = true }
assistd-llm = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

whisper-rs = { version = "0.16", optional = true, default-features = false, features = ["tracing_backend"] }
reqwest = { workspace = true, optional = true, features = ["stream"] }
nvml-wrapper = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

cpal = { version = "0.17.3", optional = true }
ringbuf = { version = "0.5", optional = true }
rubato = { version = "2.0", optional = true }

webrtc-vad = { version = "0.4", optional = true }

rodio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
which = { workspace = true, optional = true }

hound = { version = "3.5", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
hound = "3.5"

[lints]
workspace = true
