[package]
name = "assistd-wm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["i3", "sway"]
i3 = ["dep:tokio-i3ipc"]
sway = ["dep:swayipc-async"]
hyprland = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-i3ipc = { workspace = true, optional = true }
swayipc-async = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
