[package]
name = "assistd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.85"

[[bin]]
name = "assistd"
path = "src/main.rs"

[features]
default = ["daemon", "client", "chat"]
daemon = [
    "dep:assistd-core",
    "dep:assistd-llm",
    "dep:assistd-voice",
    "dep:assistd-wm",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:global-hotkey",
    "dep:nvml-wrapper",
]
client = ["dep:uuid"]
chat = [
    "daemon",
    "dep:ratatui",
    "dep:crossterm",
    "dep:futures-util",
    "dep:tracing-appender",
    "dep:textwrap",
    "dep:async-trait",
    "dep:libc",
    "dep:shlex",
    "dep:ratatui-image",
    "dep:image",
]

[dependencies]
# Always-on — shared CLI plumbing and wire protocol
assistd-ipc   = { workspace = true }
assistd-tools = { workspace = true }  # the `client` --image flag uses load_image_attachment
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# Daemon-only
assistd-core  = { workspace = true, optional = true }
assistd-llm   = { workspace = true, optional = true }
assistd-voice = { workspace = true, optional = true }
assistd-wm    = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
global-hotkey = { version = "0.7", optional = true }
nvml-wrapper = { workspace = true, optional = true }

# Client-only
uuid = { workspace = true, optional = true }

# Chat TUI
ratatui          = { workspace = true, optional = true }
crossterm        = { workspace = true, optional = true }
futures-util     = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
textwrap         = { workspace = true, optional = true }
async-trait      = { workspace = true, optional = true }
libc             = { workspace = true, optional = true }
shlex            = { workspace = true, optional = true }
ratatui-image    = { workspace = true, optional = true }
image            = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
