[package]
name = "assistd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.85"

[[bin]]
name = "assistd"
path = "src/main.rs"

[features]
default = ["daemon", "client", "chat", "tray", "tray-popup"]
daemon = [
    "dep:assistd-core",
    "dep:assistd-embed",
    "dep:assistd-llm",
    "dep:assistd-mcp",
    "dep:assistd-memory",
    "dep:assistd-voice",
    "dep:assistd-wm",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:global-hotkey",
    "dep:nvml-wrapper",
    "dep:rustix",
]
cuda = ["assistd-voice/cuda"]
client = ["dep:uuid"]
chat = [
    "daemon",
    "dep:ratatui",
    "dep:crossterm",
    "dep:futures-util",
    "dep:tracing-appender",
    "dep:textwrap",
    "dep:async-trait",
    "dep:libc",
    "dep:rustix",
    "dep:shlex",
    "dep:ratatui-image",
    "dep:image",
]
tray = [
    "client",
    "dep:assistd-config",
    "dep:ksni",
    "dep:tracing",
    "dep:tracing-subscriber",
]
tray-popup = [
    "tray",
    "dep:assistd-wm",
    "dep:eframe",
]

[dependencies]
assistd-ipc   = { workspace = true, features = ["client"] }
assistd-tools = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

assistd-core   = { workspace = true, optional = true }
assistd-embed  = { workspace = true, optional = true }
assistd-llm    = { workspace = true, optional = true }
assistd-mcp    = { workspace = true, optional = true }
assistd-memory = { workspace = true, optional = true }
assistd-voice  = { workspace = true, optional = true }
assistd-wm     = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
global-hotkey = { workspace = true, optional = true }
nvml-wrapper = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
ratatui          = { workspace = true, optional = true }
crossterm        = { workspace = true, optional = true }
futures-util     = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
textwrap         = { workspace = true, optional = true }
async-trait      = { workspace = true, optional = true }
libc             = { workspace = true, optional = true }
rustix           = { workspace = true, optional = true }
shlex            = { workspace = true, optional = true }
ratatui-image    = { workspace = true, optional = true }
image            = { workspace = true, optional = true }
ksni             = { workspace = true, optional = true }
eframe           = { workspace = true, optional = true }
assistd-config   = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
